@@ -11,7 +11,7 @@ from tipfy import (Map, Request, Response, Rule, Tipfy, redirect,
     redirect_to, render_json_response)
 
 
-def get_url_map():
+def get_url_rules():
     # Fake get_rules() for testing.
     rules = [
         Rule('/', endpoint='home', handler='test.home:HomeHandler'),
@@ -19,15 +19,14 @@ def get_url_map():
             handler='test.profile:ProfileHandler'),
     ]
 
-    return Map(rules)
+    return rules
 
 
 def get_app():
     app = Tipfy({
         'tipfy': {
-            'url_map': get_url_map(),
         },
-    })
+    }, url_rules=get_url_rules())
     app.set_wsgi_app()
     return app
 
